# IMDEX-Data-Institute-Research-Project

./: .gitignore  backbone.ipynb  backbone_landmark.ipynb  backbone_ss.ipynb  backbone_train.py  celebdf_semantic_loader.py  engine_for_finetuning.py  evaluateSSL.py  load_k400.py  pyproject.toml  run_f16x224.sh  test.ipynb  training.py  utils.py  val_debug.txt  video_mamba.ipynb
AQA/components/dataloaders/: gigaspeech_dataset.py
AQA/components/modules/: batching.py  checkpoint_utils.py  data_utils.py  ema.py  iterators.py  optim_factory.py  training.py  training_exp.py  utils.py
AQA/components/pytorch_pretrained_bert/: layer_norm.py  modeling.py
mamba/mamba_ssm/modules/: mamba_simple.py
mamba/mamba_ssm/ops/: selective_scan_interface.py
utilities/: celebdf_dataset.py  functional.py  loader.py  mcfs_dataset.py  metric.py  transformsgpu.py  video_transforms.py  voc_dataset.py  volume_transforms.py
