[tool.poetry]
name = "imdex-data-institute-research-project"
version = "0.1.0"
description = ""
authors = ["Cheng Li"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apex = "*"
av = "*"
decord = "*"
deepspeed = "*"
einops = "*"
ftfy = "*"
fvcore = "*"
imageio = "*"
lm_eval = "*"
numpy = "*"
omegaconf = "*"
opencv_python = "*"
packaging = "*"
pandas = "*"
Pillow = "*"
pytest = "*"
PyYAML = "*"
regex = "*"
Requests = "*"
scipy = "*"
setuptools = "*"
scikit-image = "*"
submitit = "*"
tensorboardX = "*"
tensorflow = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"
termcolor = "*"
timm = "*"
tqdm = "*"
transformers = "*"
wandb = "*"
wheel = "*"
xformers = "*"
jupyter = "*"
ipykernel = "*"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
